charan_azurek8_terraform/Day25_ingress-examples/guestbook-ingress/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: guestbook
    tier: frontend
