charan_azurek8_terraform/Day25_ingress-examples/guestbook-ingress/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: guestbook.com
      http:
        paths:
          - path: /
            backend:  
              serviceName: frontend
              servicePort: 80
